--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "short-unique-id": "^5.0.3",
+    "socket.io": "^4.7.2"
   }
 }
