--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "nodemon": "^3.0.3",
     "short-unique-id": "^5.0.3",
     "socket.io": "^4.7.2"
   }
