push notification is added

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=5000
+NODE_ENV=development
+ONE_SIGNAL_APP_ID=747e4922-35eb-4c13-ba55-955d075e0261
+ONE_SINGAL_APP_KEY=ZGVhMTczMjYtNDk4Ni00ZTJhLTk2ZDgtNzc2MmIzMTRjYzg3
