--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ NODE_ENV=development
 ONE_SIGNAL_APP_ID=747e4922-35eb-4c13-ba55-955d075e0261
 ONE_SINGAL_APP_KEY=ZGVhMTczMjYtNDk4Ni00ZTJhLTk2ZDgtNzc2MmIzMTRjYzg3
 SAP_COMPANY_DB_PROD=AE12_TEST_T81
-SAP_USERNAME_PROD=sb1\aej_user01a1
-SAP_PASSWORD_PROD=5i!.G0NO6
+SAP_USERNAME_PROD=sb1\aej_user001a
+SAP_PASSWORD_PROD=4o@32A!39
 SAP_COMPANY_DB_DEV=AE12_TEST_T81
-SAP_USERNAME_DEV=sb1\aej_user01a1
-SAP_PASSWORD_DEV=5i!.G0NO6
+SAP_USERNAME_DEV=sb1\aej_user001a
+SAP_PASSWORD_DEV=4o@32A!39
