--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@ PORT=5000
 NODE_ENV=development
 ONE_SIGNAL_APP_ID=747e4922-35eb-4c13-ba55-955d075e0261
 ONE_SINGAL_APP_KEY=ZGVhMTczMjYtNDk4Ni00ZTJhLTk2ZDgtNzc2MmIzMTRjYzg3
-SAP_COMPANY_DB_PROD=AE12_TEST_T81
-SAP_USERNAME_PROD=sb1\aej_user001a
-SAP_PASSWORD_PROD=4o@32A!39
+SAP_COMPANY_DB_PROD=AE19_ROFOOD_P1
+SAP_USERNAME_PROD=sb1\aeh_user01a
+SAP_PASSWORD_PROD=WIs1*0.e1
 SAP_COMPANY_DB_DEV=AE12_TEST_T81
 SAP_USERNAME_DEV=sb1\aej_user001a
 SAP_PASSWORD_DEV=4o@32A!39
+HANA_USER_NAME=llc_res_su26_adm
+HANA_PASSWORD=Kiw1bEW0P354
