--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ ONE_SINGAL_APP_KEY=ZGVhMTczMjYtNDk4Ni00ZTJhLTk2ZDgtNzc2MmIzMTRjYzg3
 SAP_COMPANY_DB_PROD=AE19_ROFOOD_P1
 SAP_USERNAME_PROD=sb1\aeh_user01a
 SAP_PASSWORD_PROD=WIs1*0.e1
-SAP_COMPANY_DB_DEV=AE12_TEST_T81
-SAP_USERNAME_DEV=sb1\aej_user001a
-SAP_PASSWORD_DEV=4o@32A!39
+SAP_COMPANY_DB_DEV=AE19_ROFOOD_D1
+SAP_USERNAME_DEV=sb1\aeh_user01a
+SAP_PASSWORD_DEV=WIs1*0.e1
 HANA_USER_NAME=llc_res_su26_adm
 HANA_PASSWORD=Kiw1bEW0P354
